# easy-cpace

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Justfile  README.md  compile_flags.txt  library.h  main.py  mise.toml  pyproject.toml
.github/workflows/: benchmark.yml  build.yml  ci.yml  fuzz.yml  release.yml  sanitizers.yml
cmake/: EasyCPaceConfig.cmake.in
docs/: draft-irtf-cfrg-cpace-13.txt  sanitizers.md
examples/: CMakeLists.txt  basic_exchange.c  benchmark.c  cpace_embedded_example.c
fuzz/: CMakeLists.txt  fuzz_protocol_inputs.c
include/: easy_cpace.h
scripts/: amalgamate.py  find_openssl.sh  generate_test_vectors.py  run_macos_asan.sh  run_sanitizers.sh
src/: CMakeLists.txt
src/common/: debug.h  utils.c  utils.h
src/cpace_api/: cpace_api.c
src/cpace_core/: cpace_core.c  cpace_core.h
src/crypto_backend_mbedtls/: CMakeLists.txt
src/crypto_backend_monocypher/: CMakeLists.txt  monocypher_backend.c
src/crypto_backend_openssl/: CMakeLists.txt  openssl_backend.c  openssl_elligator2.c  openssl_elligator2_internal.h
src/crypto_iface/: crypto_provider.h
tests/: CMakeLists.txt  rfc_b1_vectors.txt  test_api_runner.c  test_cpace_api.c  test_cpace_vectors.c  test_runner.c  test_vectors_runner.c  unity_test_helpers.h.in
